fixed footer alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,7 @@ h1{
 
 p{
   font-weight: 400;
-  text-align: left;
+  
 }
 
 #aboutwrap {
